--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+python-dotenv==0.19.2
 pytz==2021.3
 requests==2.27.1
 six==1.16.0
